third_party/vendor/async-stream-0.3.2/tests/ui/yield_bad_expr_in_macro.stderr
error: expected expression
 --> $DIR/yield_bad_expr_in_macro.rs:8:33
  |
8 |             _ = work() => yield fn f() {},
  |                                 ^^
